tests/baselines/reference/es5ExportDefaultIdentifier.errors.txt
tests/cases/compiler/es5ExportDefaultIdentifier.ts(4,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== tests/cases/compiler/es5ExportDefaultIdentifier.ts (1 errors) ====
    
    export function f() { }
    
    export default f;
    ~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    